--- a/profiles/releng/airootfs/etc/mkinitcpio.conf
+++ b/profiles/releng/airootfs/etc/mkinitcpio.conf
@@ -52,7 +52,7 @@ FILES=()
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
-HOOKS=(base udev modconf memdisk block filesystems keyboard)
+HOOKS=(base udev modconf memdisk block filesystems keyboard live_hook)
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
@@ -60,7 +60,8 @@ HOOKS=(base udev modconf memdisk block filesystems keyboard)
 #COMPRESSION="gzip"
 #COMPRESSION="bzip2"
 #COMPRESSION="lzma"
-COMPRESSION="xz"
+#COMPRESSION="xz"
+COMPRESSION="cat"
 #COMPRESSION="lzop"
 #COMPRESSION="lz4"
 #COMPRESSION="zstd"
