Remove prebuilt EFI files & add baseline profile & edit releng profile & change ISO structure & add label and app id variables to profile.yaml & bug fixes

--- a/profiles/releng/grub.cfg
+++ b/profiles/releng/grub.cfg
@@ -1,8 +1,22 @@
 insmod all_video
 insmod part_msdos
+insmod part_gpt
 insmod fat
 
+set timeout=10
+
 menuentry "Start Arch Linux x86_64" --class arch {
-        linux /live/vmlinuz-linux boot=live --
-        initrd /live/initramfs-linux.img
+        linux /boot/vmlinuz-linux boot=live --
+        initrd /boot/intel-ucode.img /boot/amd-ucode.img /boot/initramfs-linux.img
 }
+
+menuentry "Start Arch Linux x86_64 (compatibility mode)" --class arch {
+        linux /boot/vmlinuz-linux boot=live noapic noacpi irqpoll nomodoset --
+        initrd /boot/initramfs-linux.img
+}
+
+if [ "${grub_platform}" == "pc" ]; then
+    menuentry "Memory Tester (memtest86+)" --class memtest86 --class gnu --class tool {
+        linux16 /boot/memtest86+/memtest.bin
+    }
+fi
