--- a/profiles/releng/profile.yaml
+++ b/profiles/releng/profile.yaml
@@ -7,6 +7,7 @@ airootfs_directory: airootfs
 arch: x86_64
 pacman: pacman.conf
 grub_cfg: grub.cfg
+compression_options: -comp gzip
 packages:
  - packages.x86_64
 file_permissions:
@@ -16,6 +17,5 @@ file_permissions:
  - /usr/local/bin/choose-mirror|0:0:755
  - /usr/local/bin/Installation_guide|0:0:755
  - /usr/local/bin/livecd-sound|0:0:755
-
 customize_airootfs:
  - customize-airootfs.sh
