--- a/profiles/baseline/profile.yaml
+++ b/profiles/baseline/profile.yaml
@@ -4,6 +4,7 @@ publisher: Arch Linux <https://archlinux.org>
 label: ARCH_TEAISO
 application_id: Arch Linux Live/Rescue Media
 airootfs_directory: airootfs
+#iso_merge: iso_merge
 arch: x86_64
 pacman: pacman.conf
 grub_cfg: grub.cfg
