--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .idea
 /work
 /output
-src/__pycache__/utils.cpython-38.pyc
 lib/libteaiso.so
 lib/a.out
+src/__pycache__/colors.cpython-38.pyc
+src/__pycache__/settings.cpython-38.pyc
+src/__pycache__/utils.cpython-38.pyc
