--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,5 @@
 /output
 lib/libteaiso.so
 lib/a.out
-src/__pycache__/colors.cpython-38.pyc
-src/__pycache__/settings.cpython-38.pyc
-src/__pycache__/utils.cpython-38.pyc
+src/__pycache__/
+
