fix chroot creation

--- a/profiles/baseline/pacman.conf
+++ b/profiles/baseline/pacman.conf
@@ -2,8 +2,6 @@
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
-#
-# SPDX-License-Identifier: GPL-3.0-or-later
 
 #
 # GENERAL OPTIONS
@@ -16,9 +14,10 @@
 #CacheDir    = /var/cache/pacman/pkg/
 #LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
-#HookDir     = /etc/pacman.d/hooks/
 HoldPkg     = pacman glibc
-#XferCommand = /usr/bin/curl -L -C - -f -o %o %u
+# If upgrades are available for these packages they will be asked for first
+#SyncFirst   = pacman
+#XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
 Architecture = auto
@@ -32,17 +31,14 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
+#UseDelta
 #TotalDownload
-# We cannot check disk space from within a chroot environment
-#CheckSpace
+CheckSpace
 #VerbosePkgLists
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
-SigLevel    = Required DatabaseOptional
-LocalFileSigLevel = Optional
-#RemoteFileSigLevel = Required
+#SigLevel = Optional TrustedOnly
 
 # NOTE: You must run `pacman-key --init` before first using pacman; the local
 # keyring can then be populated with the keys of all official Arch Linux
@@ -71,40 +67,40 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-[tearch_repo]
-SigLevel = Optional TrustedOnly
-Include = /etc/pacman.d/tearch-mirrorlist
-
-[pantheon_repo]
-SigLevel = Optional TrustedOnly
-Include = /etc/pacman.d/tearch-mirrorlist
-
 #[testing]
+#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
 [core]
+SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 [extra]
+SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 #[community-testing]
+#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
 [community]
+SigLevel = PackageRequired
 Include = /etc/pacman.d/mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
 #[multilib-testing]
+#SigLevel = PackageRequired
 #Include = /etc/pacman.d/mirrorlist
 
-#[multilib]	
-#Include = /etc/pacman.d/mirrorlist
+[multilib]
+#SigLevel = PackageRequired
+Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
