--- a/profiles/baseline/airootfs/etc/mkinitcpio.conf
+++ b/profiles/baseline/airootfs/etc/mkinitcpio.conf
@@ -1,6 +1,3 @@
-#
-# SPDX-License-Identifier: GPL-3.0-or-later
-
 # vim:set ft=sh
 # MODULES
 # The following modules are loaded before any boot hooks are
@@ -52,12 +49,12 @@ FILES=()
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
-HOOKS=(base udev modconf memdisk live_hook block filesystems keyboard)
+HOOKS=(base udev modconf archiso block filesystems)
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
 # is used. Use 'cat' to create an uncompressed image.
-COMPRESSION="gzip"
+#COMPRESSION="gzip"
 #COMPRESSION="bzip2"
 #COMPRESSION="lzma"
 #COMPRESSION="xz"
@@ -68,3 +65,4 @@ COMPRESSION="gzip"
 # COMPRESSION_OPTIONS
 # Additional options for the compressor
 #COMPRESSION_OPTIONS=()
+
