--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,6 +4,6 @@ install:
 	mkdir -p $(DESTDIR)/usr/lib/ || true
 	install libteaiso.so $(DESTDIR)/usr/lib/libteaiso.so
 test:
-	gcc util.c test.c -g -Wno-all -o a.out && ./a.out
+	gcc util.c test.c -g -Wno-all -o a.out && ./a.out --variable "teaiso"
 clean:
 	rm -f libteaiso.so
